replace some commons-lang3 usages with Objects.equals and String.isEmpty, getting rid of another dependency